fix: add white background color to mat-stroked-button for better visibility

--- a/src/material-theme.scss
+++ b/src/material-theme.scss
@@ -64,6 +64,10 @@ html {
     )
   );
 
+  button[mat-stroked-button] {
+    background-color: white;
+  }
+
   @include mat.button-toggle-overrides(
     (
       shape: 0.25rem,
